[workspace]
members=[
    "packages/*",
]
resolver = "2"

# Add a patch section to fix the mio dependency issues for wasm
[patch.crates-io]
mio = { git = "https://github.com/tokio-rs/mio.git", branch = "master" }

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using whole-program analysis
lto = true
